@@ -23,7 +23,7 @@ requires       'Tie::File'             => 0;
 requires       'YAML::Tiny'            => '1.12';
 requires       'Module::CoreList'      => '2.13';
 requires       'CPAN'                  => 0;
-requires       'Perl::Dist::Downloads' => '0.05';
+requires       'PAR::Dist'             => '0.27';
 requires       'Process'               => '0.20';
 requires       'Process::Storable'     => 0;
 requires       'Process::Delegatable'  => 0;
